$Id: NEWS,v 1.101 2001-05-16 14:35:26 flood Exp $

1.2.2 - CVS
---------------------------------
- Bug 1152 - Off-by-one in the PassivePorts code
- Bug 1137 - NLST displayed hidden files

1.2.2rc2 - Released 04/20/2001
---------------------------------
The `AllowChmod' directive has been deprecated, and will not work
consistantly.  Use <Limit SITE_CHMOD> instead.

- Bug 1112 - Compilation fix for IRIX 6.2.
- Bug 1128 - Fixed possibled Linux sendfile() corruption issue.
- Bug 1093 - Checking for world writable log files and symlinks.
- Bug 1094 - AuthUserFile/AuthGroupFile disallow relative paths.
- Bug 1096 - Case sensitivity issues in config, better checking of
  RLimit* directive arguments.
- Bug 1090 - AllowFilter/DenyFilter now logs correctly.
- Bug 1119 - glibc-glob compilation issue on IRIX6.
- Bug 1090 - ExtendedLog should now report ALL events (even errors)

1.2.2rc1 - Released 03/24/2001
---------------------------------
- Bug 1085 - Better logging of "User is not a UserAlias" and "Can't find
  user."
- Bug 1043 - Fixed possible infinite loop in bandwidth throttling code.
- New RLimit* directives used to control resource usage on support platforms.
- Bug 1075 - Sub-contexts (<Directory>, etc) weren't being fully copied from
  <Global> to vhosts.
- Bug 1049 - New User/Groups weren't being seen after startup w/out a SIGHUP.
- Bug 1066 - new GNU glob() and friends, which properly limits recursion and
  avoids DoS issues.  Built-in glob support is now always compiled in to
  proftpd regardless of libc support on build platform.
- New directive "MasqueradeAddress", used to emit a "fake" (non-interface) IP
  in server ident, magic cookies and PASV commands.  Useful for firewalled or
  NAT'd networks that are not FTP aware.
- Bug 1044 - New directive "AccessDenyMsg", works just like AccessAllowMsg,
  but does the obvious.
- Bug 1055 - Not really a bug, but still .. ftpwho/ftpcount now attempt to
  scan proftpd.conf looking for ScoreboardPath, if all else fails