@@ -179,6 +179,9 @@ extern int errno;
 /* This function doesn't exist on most systems.  */
 
 # if !defined HAVE___STRCHRNUL && !defined _LIBC
+
+static char * __strchrnul (const char *s, int c);
+
 static char *
 __strchrnul (s, c)
      const char *s;
